# modules/express-example/backend/routes/index.js
@@ -28,4 +28,27 @@ router.get('/alive', function(req, res, next) {
   res.send('I\'m alive!')
 });
 
+/**
+ * @swagger
+ * /health:
+ *   get:
+ *     summary: Health
+ *     description:  Health Check endpoint
+ *     tags:
+ *       - default
+ *     produces:
+ *       - string
+ *     responses:
+ *       200:
+ *         description: Health Check response
+ *         content:
+ *           string:
+ *             schema:
+ *               type: string
+ */
+router.get('/health', function(req, res, next) {
+  res.send('OK')
+});
+
+
 module.exports = router;
