# modules/fastapi-example/backend/api/main.py
@@ -1,4 +1,5 @@
-import random
+import os
+import time
 
 from typing import Union
 
@@ -19,6 +20,13 @@ def read_root():
 def keep_alive():
     return "I'm alive!"
 
+@api.get("/health")
+def health():
+    return {
+        "git_hash": os.environ['GIT_HASH'],
+        "hostname": os.uname().nodename,
+        "server_time": int(time.time())
+    }
 
 @api.get("/items/{item_id}")
 def read_item(item_id: int, q: Union[str, None] = None):
